--- a/homepage.css
+++ b/homepage.css
@@ -1,8 +1,17 @@
 body {
-    background: url(images/moons.png);
+    background-color:#556;
+background-image: linear-gradient(30deg, #445 12%, transparent 12.5%, transparent 87%, #445 87.5%, #445),
+linear-gradient(150deg, #445 12%, transparent 12.5%, transparent 87%, #445 87.5%, #445),
+linear-gradient(30deg, #445 12%, transparent 12.5%, transparent 87%, #445 87.5%, #445),
+linear-gradient(150deg, #445 12%, transparent 12.5%, transparent 87%, #445 87.5%, #445),
+linear-gradient(60deg, #99a 25%, transparent 25.5%, transparent 75%, #99a 75%, #99a),
+linear-gradient(60deg, #99a 25%, transparent 25.5%, transparent 75%, #99a 75%, #99a);
+background-size:80px 140px;
+background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;
+    /* background: url(images/moons.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: 100% 100%;
+    background-size: 100% 100%; */
     padding: 50px;
 }
 
@@ -13,7 +22,6 @@ header {
 
 nav {
     font-family: 'Montserrat Subrayada', sans-serif;
-    color: rgba(172, 255, 47, 0.762);
     position: sticky;
 }
 
@@ -45,7 +53,7 @@ h5 {
 }
 
 .intro-container {
-    background-color: rgba(105, 105, 105, 0.817);
+    background-color: rgba(38, 227, 167, 0.824);
     color: black;
     display: flex;
     flex-direction: column;
@@ -61,7 +69,7 @@ h5 {
 }
 
 .about-container {
-    background-color: rgba(172, 255, 47, 0.762);
+    background-color: rgba(38, 227, 167, 0.824);
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
@@ -70,7 +78,7 @@ h5 {
 }
 
 .picture img {
-    border-radius: 50%;
+    border-radius: 40%;
     display: block;
     justify-content: center;
     margin-left: auto;
@@ -84,7 +92,7 @@ h5 {
 }
 
 .skills-container {
-    background-color: rgba(105, 105, 105, 0.536);
+    background-color: rgba(38, 227, 167, 0.824);
     padding-right: 3rem;
     padding-left: 3rem;
 }
@@ -103,13 +111,12 @@ h5 {
 }
 
 .proj-container {
-    background-color: rgba(172, 255, 47, 0.612);
+    background-color: rgba(38, 227, 167, 0.824);
 }
 
 .project {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
 }
 
 .card-container {
@@ -130,6 +137,10 @@ h5 {
     font-family: 'Arvo', serif;
     padding-left: 100px;
     text-decoration: none;
+}
+
+.vine {
+    margin-left: auto;
 }
 
 .footer-container {
