--- a/index.css
+++ b/index.css
@@ -1,14 +1,7 @@
 body {
-    background-color:#556;
-    background-image: linear-gradient(30deg, #445 12%, transparent 12.5%, transparent 87%, #445 87.5%, #445),
-    linear-gradient(150deg, #445 12%, transparent 12.5%, transparent 87%, #445 87.5%, #445),
-    linear-gradient(30deg, #445 12%, transparent 12.5%, transparent 87%, #445 87.5%, #445),
-    linear-gradient(150deg, #445 12%, transparent 12.5%, transparent 87%, #445 87.5%, #445),
-    linear-gradient(60deg, #99a 25%, transparent 25.5%, transparent 75%, #99a 75%, #99a),
-    linear-gradient(60deg, #99a 25%, transparent 25.5%, transparent 75%, #99a 75%, #99a);
-    background-size:80px 140px;
-    background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;
-    padding: 50px;
+    background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
+                linear-gradient(127deg, rgba(0,255,0,.8), rgba(0,255,0,0) 70.71%),
+                linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
 }
 
 header {
@@ -18,6 +11,7 @@ header {
 
 nav {
     font-family: 'Montserrat Subrayada', sans-serif;
+    height: 4rem;
     position: sticky;
 }
 
@@ -49,7 +43,6 @@ h5 {
 }
 
 .intro-container {
-    background-color: rgba(38, 227, 167, 0.824);
     color: black;
     display: flex;
     flex-direction: column;
@@ -65,7 +58,6 @@ h5 {
 }
 
 .about-container {
-    background-color: rgba(38, 227, 167, 0.824);
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
@@ -88,7 +80,6 @@ h5 {
 }
 
 .skills-container {
-    background-color: rgba(38, 227, 167, 0.824);
     padding-right: 3rem;
     padding-left: 3rem;
 }
@@ -104,10 +95,6 @@ h5 {
 
 .icon {
     padding: 20px;
-}
-
-.proj-container {
-    background-color: rgba(38, 227, 167, 0.824);
 }
 
 .project {
