Added new project

--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #b5ef2285;
+    /* background-color: #b5ef2285; */
     margin-left: 300px;
 }
 
@@ -167,7 +167,7 @@ h5 {
     text-decoration: none;
 }
 
-.vine {
+.instagram {
     margin-left: auto;
 }
 
